--- a/Color Flipper/index.html
+++ b/Color Flipper/index.html
@@ -1,40 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    
 </head>
+
 <body>
-    <nav>
-        <div class="nav-center">
-            <h4>Color flipper</h4>
-            <ul class="nav-links">
-                <li>
-                    <a href="index.html">
-                        Simple
-                    </a>
-                </li>
-                <li>
-                    <a href="hex.html">
-                        Hex
-                    </a>
-                </li>
-            </ul>
+    <div class="nav">
+        <div class="nav-bar">
+            <h1> FLIPPPER </h1>
         </div>
-    </nav>
-    <main>
-        <div class="container">
-            <h2>Background Color: <span class="color">
-                #f1f5f8
-            </span></h2>
-            <button id="btn">
-                Click me
-            </button>
+        <div>
+            <h1><a href="index.html">Simple Generation</a></h1>
         </div>
-    </main>
-    <script src="app.js"></script>
+        <div>
+            <h1><a href="hex.html">Random Generation</a></h1>
+        </div>
+        <div />
 </body>
+
 </html>
