counter_JS_logic_done

--- a/JS/Counter/index.html
+++ b/JS/Counter/index.html
@@ -6,25 +6,26 @@
     </head>
     <link rel="StyleSheet" href="styles.css"/>
     <body>
-        <script src="app.js"></script>
+        
         <div class="nav">
             <h1 class="Title">Counter</h1>
         </div>
         <main class="center">
             <div class="bodyy">
-            Counter <span class="count" id="count">0</span>
+            Counter <span id="count">0</span>
             </div>
             <div class="controls">
-                <button id="RESET">
+                <button id="RESET" onclick="">
                     RESET
-                <button/>
-                <buttom id="increase">
+                </button>
+                <button id="increase">
                     INCRIMENT
-                <button/>
+                </button>
                 <button id="decrease">
                     DECREMET
-                <button/>
+                </button>
             </div>
         </main>
+        <script src="app.js"></script>
     </body>
 </html>
