done!--styles-added

--- a/JS/Counter/index.html
+++ b/JS/Counter/index.html
@@ -8,11 +8,11 @@
     <body>
         
         <div class="nav">
-            <h1 class="Title">Counter</h1>
+            <h1 class="Title">Counterrrr</h1>
         </div>
         <main class="center">
             <div class="bodyy">
-            Counter <span id="count">0</span>
+            <h1>Counter</h1> <span id="count"><mark>0</mark></span>
             </div>
             <div class="controls">
                 <button id="RESET" onclick="">
